# eqSolver

./: CMakeLists.txt  comand-cmake.txt
cmake/: FindMUMPS.cmake
src/comm/: Communication.cpp  Communication.h
src/conf/: cJSON.h  config_parser.cpp  config_parser.h
src/log/: Logs.cpp  Logs.h  Timer.cpp  Timer.h
src/parallel/: MPI_Manager.cpp  MPI_Manager.h  MPI_Process.cpp  MPI_Process.h  MPI_Worker.cpp  MPI_Worker.h
src/server/: server.cpp
src/solvers/: cusolver.cu  cusolver.h  equationSystem.cpp  equationSystem.h  mumpsSolver.cpp  mumpsSolver.h  petscSolver.cpp  petscSolver.h  solver.cpp  solver.h  solverOptions.h  solverid.h
